Sorgente/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>SG</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aperto</fullName>
        </values>
        <values>
            <fullName>Campione Spedito verso Lab</fullName>
        </values>
        <values>
            <fullName>Campione spedito verso SG</fullName>
        </values>
        <values>
            <fullName>Chiuso da ripetere</fullName>
        </values>
        <values>
            <fullName>Chiuso perso</fullName>
        </values>
        <values>
            <fullName>Chiuso vinto</fullName>
        </values>
        <values>
            <fullName>Da pianificare prelievo</fullName>
        </values>
        <values>
            <fullName>IA prelievo</fullName>
        </values>
        <values>
            <fullName>Risultati da comunicare</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SS</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aperto</fullName>
        </values>
        <values>
            <fullName>Chiuso perso</fullName>
        </values>
        <values>
            <fullName>Chiuso vinto</fullName>
        </values>
        <values>
            <fullName>In attesa parto</fullName>
        </values>
        <values>
            <fullName>In firma</fullName>
        </values>
        <values>
            <fullName>In perdita</fullName>
        </values>
        <values>
            <fullName>Post parto</fullName>
        </values>
        <values>
            <fullName>Preparto</fullName>
        </values>
        <values>
            <fullName>Prospect perso</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AWB_della_spedizione_verso_cliente__c</fullName>
        <label>AWB della spedizione verso cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWB_verso_GS__c</fullName>
        <label>AWB verso SG</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWB_verso_lab__c</fullName>
        <label>AWB verso lab</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addizionale_trasferta_Op_Pre__c</fullName>
        <label>Addizionale trasferta Op. Pre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Force.com - App Subscription User (KAM)</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agente_che_fa_appuntamento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agente che fa appuntamento</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Force.com - App Subscription User (KAM)</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agente_gestionale_c__c</fullName>
        <label>Agente gestionale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agente_referente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Categoria_collaboratore__c</field>
                <operation>equals</operation>
                <value>Agente</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Collaboratore</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunità (Agente)</relationshipLabel>
        <relationshipName>Opportunit3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agente_titolare_ginecologo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agente titolare ginecologo</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Altro_Perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altro Perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amici_Conoscenti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amici\Conoscenti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amici_conoscenti_Perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amici/conoscenti Perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analisi__c</fullName>
        <label>Analisi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prescritte</fullName>
                </value>
                <value>
                    <fullName>Effettuate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appuntamento_gi_fatto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appuntamento già fatto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assegnazione_appuntamento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assegnazione appuntamento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SS</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAP_fatturazione__c</fullName>
        <label>CAP fatturazione</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_spedizione__c</fullName>
        <label>CAP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campione_conservato__c</fullName>
        <label>Campione conservato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>si</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>In attesa consenso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campione_raccolto__c</fullName>
        <label>Campione raccolto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>si</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canale__c</fullName>
        <formula>IF(ISPICKVAL(Account.PersonContact.LeadSource,&quot;Telefono&quot;),&quot;Telefono&quot;,IF(ISPICKVAL(Account.PersonContact.LeadSource,&quot;Form&quot;),&quot;Form&quot;,IF(ISPICKVAL(Account.PersonContact.LeadSource,&quot;Coupon&quot;),&quot;Coupon&quot;,IF(ISPICKVAL(Account.PersonContact.LeadSource,&quot;Email&quot;),&quot;Email&quot;,IF(ISPICKVAL(Account.PersonContact.LeadSource,&quot;KAM&quot;),&quot;KAM&quot;,IF(ISPICKVAL(Account.PersonContact.LeadSource,&quot;Specialista&quot;),&quot;Specialista&quot;,IF(ISPICKVAL(Account.PersonContact.LeadSource,&quot;Altro&quot;),&quot;Altro&quot;,IF(ISPICKVAL(Account.PersonContact.LeadSource,&quot;Gestionale&quot;),&quot;Gestionale&quot;,&quot;&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canale_del__c</fullName>
        <label>Canale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telefono</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>Specialista</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Gestionale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cellulare_Fatturazione__c</fullName>
        <label>Cellulare Fatturazione</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Certificato_data_del_parto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificato data del parto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckWorkflow2__c</fullName>
        <defaultValue>&quot;NNNNNNNNNNNNNNN&quot;</defaultValue>
        <label>CheckWorkflow2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckWorkflow__c</fullName>
        <defaultValue>&quot;NNNNNNNNNNNNNNN&quot;</defaultValue>
        <label>CheckWorkflow</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citt_fatturazione__c</fullName>
        <label>Città fatturazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citt_spedizione__c</fullName>
        <label>Città</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_pagante__c</fullName>
        <label>Cliente pagante</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paziente</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Specialista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codice_campione_1__c</fullName>
        <label>Codice campione 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_campione_2__c</fullName>
        <label>Codice campione 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_campione_3__c</fullName>
        <label>Codice campione 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_fiscale_fatturazione__c</fullName>
        <label>Codice fiscale fatturazione</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Codice_ordine__c</fullName>
        <externalId>true</externalId>
        <label>Codice ordine Kit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_Fatturazione__c</fullName>
        <label>Cognome Fatturazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_figlio__c</fullName>
        <label>Cognome figlio</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_spedizione__c</fullName>
        <label>Cognome spedizione</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collaboratore_Perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collaboratore Perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collaboratore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collaboratore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conservazione_tessuto__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica se prospect ha scelto di conservare il tessuto</description>
        <label>Conservazione tessuto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contratto_firmato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contratto firmato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contratto_on_line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contratto on-line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corriere__c</fullName>
        <label>Corriere nazionale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>Duimex</fullName>
                </value>
                <value>
                    <fullName>DHL Saturday Sameday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corriere_estero__c</fullName>
        <label>Corriere estero</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHL</fullName>
                    <default>true</default>
                    <label>DHL</label>
                </value>
                <value>
                    <fullName>Derkurier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corso_Preparto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corso Preparto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corso_preparto_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corso preparto perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counseling_effettuato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Counseling effettuato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Selling_Aurora__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross Selling - Aurora</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Selling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross Selling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_selling_perso_Aurora__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross selling perso Aurora</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_selling_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross selling perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPP_pi_5__c</fullName>
        <formula>Data_presunta_parto__c +5</formula>
        <label>DPP più 5</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Da_verificare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Da verificare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Da_verificare_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Da verificare perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Assegnazione_Agente__c</fullName>
        <label>Data Assegnazione Agente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Riconoscimento_Agente__c</fullName>
        <label>Data Riconoscimento Agente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_arrivo_a_lab__c</fullName>
        <label>Data arrivo a lab</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_di_desiderata_ricezione__c</fullName>
        <label>Data di ricezione kit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_di_spedizione_desiderata__c</fullName>
        <label>Data di spedizione kit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_di_spedizione_effettiva__c</fullName>
        <label>Data di spedizione effettiva</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_effettiva_ricezione_kit__c</fullName>
        <description>Data di ricezione del kit in laboratorio</description>
        <label>Data effettiva ricezione kit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_firma_contratto__c</fullName>
        <label>Data firma contratto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_invio_a_lab__c</fullName>
        <label>Data invio a lab</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ora_appuntamento__c</fullName>
        <label>Data/ora appuntamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ora_attivazione__c</fullName>
        <label>Data/ora attivazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ora_effettiva_parto__c</fullName>
        <label>Data/ora effettiva parto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ora_invio_a_SG__c</fullName>
        <label>Data/ora invio a SG</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ora_prelievo_effettiva__c</fullName>
        <label>Data/ora prelievo effettiva</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ora_prelievo_prevista__c</fullName>
        <label>Data/ora prelievo prevista</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ora_ritiro_campione__c</fullName>
        <label>Data/ora ritiro campione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ordine__c</fullName>
        <label>Data ordine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_pagamento_kit__c</fullName>
        <label>Data pagamento kit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_presunta_parto__c</fullName>
        <label>Data presunta parto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_prevista_arrivo_GS__c</fullName>
        <label>Data prevista arrivo SG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_prevista_arrivo_lab__c</fullName>
        <label>Data prevista arrivo lab</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_refertazione_accettata__c</fullName>
        <label>Data refertazione accettata</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_refertazione_completata__c</fullName>
        <label>Data refertazione completata</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_referto_comunicato__c</fullName>
        <label>Data referto comunicato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ricezione_a_GS__c</fullName>
        <label>Data ricezione a SG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ricezione_analisi__c</fullName>
        <label>Data ricezione analisi</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ricezione_modulo_ASG__c</fullName>
        <label>Data ricezione modulo ASG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ricontatto__c</fullName>
        <label>Data ricontatto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ricontatto_preparto__c</fullName>
        <label>Data ricontatto preparto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_spedizione_kit_da_decidere__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data spedizione kit da decidere</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_spedizione_screening_neonatale__c</fullName>
        <label>Data spedizione screening neonatale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ultima_visita_agente_ginecologo__c</fullName>
        <formula>Ginecologo__r.Data_ultima_visita__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data ultima visita agente ginecologo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ultimo_contatto__c</fullName>
        <label>Data ultimo contatto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Descrizione_ricontatto_preparto__c</fullName>
        <label>Note ricontatto preparto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dettaglio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dettaglio specialista</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Specialista</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunità (Dettaglio origine)</relationshipLabel>
        <relationshipName>Opportunit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dettaglio_origine_aperto__c</fullName>
        <label>Dettaglio aperto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dettaglio_origine_professional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dettaglio professional</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunità (Dettaglio origine professional)</relationshipLabel>
        <relationshipName>Opportunit2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dettaglio_origine_sconosciuto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dettaglio origine sconosciuto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dettaglio_programma_amico__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dettaglio programma amico</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prospect/cliente</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunità (Dettaglio programma amico)</relationshipLabel>
        <relationshipName>Opportunit3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Fatturazione__c</fullName>
        <label>Email Fatturazione</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_person_account__c</fullName>
        <label>Email person account</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fiere_e_Convegni__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fiere e Convegni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiere_e_convegni_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fiere e convegni perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forza_Codice_Fiscale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forza Codice Fiscale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gi_Cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Già Cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gi_cliente_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Già cliente perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ginecologo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ginecologo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Specialista</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunità (Ginecologo)</relationshipLabel>
        <relationshipName>Opportunit2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ginecologo_da_verificare__c</fullName>
        <label>Ginecologo da verificare</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ginecologo_non_ancora_deciso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ginecologo non ancora deciso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giornale_Riviste__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Giornale\Riviste</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giornali_riviste_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Giornali/riviste perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giorni_da_ultimo_contatto__c</fullName>
        <formula>NOW() - Data_ultimo_contatto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giorni da ultimo contatto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Giorni_mancanti__c</fullName>
        <formula>Data_presunta_parto__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giorni mancanti</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Ginecologo__c</fullName>
        <formula>Ginecologo__r.Id_univoco_18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Ginecologo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Ind_Sped__c</fullName>
        <label>ID Indirizzo spedizione</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Ind_fatt__c</fullName>
        <label>ID Indirizzo fatturazione</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_opportunit__c</fullName>
        <externalId>true</externalId>
        <label>ID opportunità</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icona__c</fullName>
        <formula>IMAGE(IF(Data_presunta_parto__c-TODAY() &lt;45,&quot;https://c.cs83.content.force.com/servlet/servlet.ImageServer?id=0154E00000063sY&amp;oid=00D4E000000D1Lv&amp;lastMod=1481220362000&quot;,&quot;https://c.cs83.content.force.com/servlet/servlet.ImageServer?id=0154E00000063sO&amp;oid=00D4E000000D1Lv&amp;lastMod=1481220324000&quot;),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Icona &lt;45</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importo_maxi_rata__c</fullName>
        <label>Importo maxi rata</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_attesa_risposta_prospect__c</fullName>
        <label>Risposta prospect appuntamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In attesa risposta</fullName>
                </value>
                <value>
                    <fullName>Concordato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_perdita__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In perdita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intestatario_IBAN__c</fullName>
        <label>Intestatario IBAN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KAM_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KAM perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kit_ordinato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kit ordinato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kit_utilizzato__c</fullName>
        <label>Kit utilizzato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Letto__c</fullName>
        <label>Letto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Contratto_Online__c</fullName>
        <description>URL per la compilazione del Contratto Online Staminali</description>
        <label>Link Contratto Online</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Fattura_Kit__c</fullName>
        <label>Link Fattura Kit</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>